@@ -21,7 +21,8 @@ import java.awt.event.MouseEvent;
 
 import javax.swing.JScrollPane;
 
-import forge.view.arcane.util.CardPanelMouseListener;
+import forge.gui.match.CMatchUI;
+import forge.gui.match.controllers.CMessage;
 
 
 /**
@@ -50,41 +51,19 @@ public class HandArea extends CardArea {
 
         this.setDragEnabled(true);
         this.setVertical(true);
+    }
 
-        this.addCardPanelMouseListener(new CardPanelMouseListener() {
-            @Override
-            public void mouseRightClicked(final CardPanel panel, final MouseEvent evt) {
-            }
+    /** {@inheritDoc} */
+    @Override
+    public final void mouseOver(final CardPanel panel, final MouseEvent evt) {
+        CMatchUI.SINGLETON_INSTANCE.setCard(panel.getCard(), evt.isShiftDown());
+        super.mouseOver(panel, evt);
+    }
 
-            @Override
-            public void mouseOver(final CardPanel panel, final MouseEvent evt) {
-            }
-
-            @Override
-            public void mouseOut(final CardPanel panel, final MouseEvent evt) {
-            }
-
-            @Override
-            public void mouseMiddleClicked(final CardPanel panel, final MouseEvent evt) {
-            }
-
-            @Override
-            public void mouseLeftClicked(final CardPanel panel, final MouseEvent evt) {
-
-            }
-
-            @Override
-            public void mouseDragged(final CardPanel dragPanel, final int dragOffsetX, final int dragOffsetY,
-                    final MouseEvent evt) {
-            }
-
-            @Override
-            public void mouseDragStart(final CardPanel dragPanel, final MouseEvent evt) {
-            }
-
-            @Override
-            public void mouseDragEnd(final CardPanel dragPanel, final MouseEvent evt) {
-            }
-        });
+    /** {@inheritDoc} */
+    @Override
+    public final void mouseLeftClicked(final CardPanel panel, final MouseEvent evt) {
+        CMessage.SINGLETON_INSTANCE.getInputControl().selectCard(panel.getCard(), evt.isMetaDown());
+        super.mouseLeftClicked(panel, evt);
     }
 }
